--- a/Contacts/Gemfile
+++ b/Contacts/Gemfile
@@ -33,6 +33,9 @@ gem 'sqlite3'
 # gem 'capistrano-rails', group: :development
 
 group :development, :test do
+  # RSpec testing framework, replacing Test::Unit
+  gem 'rspec-rails', '~> 3.0'
+
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
 
