--- a/Contacts/Gemfile
+++ b/Contacts/Gemfile
@@ -32,6 +32,9 @@ gem 'sqlite3'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+# https://github.com/jnicklas/capybara
+gem 'capybara'
+
 group :development, :test do
   # RSpec testing framework, replacing Test::Unit
   gem 'rspec-rails', '~> 3.0'
